Update application.properties with consistent transport configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,72 @@
+# =============================================================================
 # Red Hat Knowledge Base MCP Server Configuration
+# =============================================================================
 
-# Server name
-quarkus.application.name=redhat-kb
+# -----------------------------------------------------------------------------
+# Application Settings
+# -----------------------------------------------------------------------------
+quarkus.application.name=redhat-kb-mcp
+quarkus.application.version=1.0.0
 
-# HTTP Configuration
+# -----------------------------------------------------------------------------
+# HTTP Server Configuration
+# -----------------------------------------------------------------------------
 quarkus.http.port=9081
 quarkus.http.host=0.0.0.0
 
+# CORS Configuration (required for MCP Streamable HTTP)
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=Content-Type,Accept
+
+# -----------------------------------------------------------------------------
 # MCP Server Configuration
-quarkus.mcp.server.stdio.enabled=true
-quarkus.mcp.server.sse.root-path=/mcp
+# -----------------------------------------------------------------------------
+quarkus.mcp.server.traffic-logging.enabled=true
+quarkus.mcp.server.traffic-logging.text-limit=1000
 
+# -----------------------------------------------------------------------------
 # Red Hat API Configuration
-# Token from https://access.redhat.com/management/api
-redhat.api.offline-token=${REDHAT_TOKEN:}
+# -----------------------------------------------------------------------------
 
-# SSO Configuration (defaults work for most users)
+# Offline Token (Required)
+# Generate at: https://access.redhat.com/management/api
+redhat.api.offline-token=${REDHAT_TOKEN}
+
+# SSO Configuration
 redhat.api.sso.token-url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
 redhat.api.sso.client-id=rhsm-api
 redhat.api.sso.token-renewal-buffer-seconds=60
 
-# Timeout Configuration
+# HTTP Timeouts (seconds)
 redhat.api.timeouts.connect-seconds=30
 redhat.api.timeouts.request-seconds=60
 
-# Logging
+# -----------------------------------------------------------------------------
+# Logging Configuration
+# -----------------------------------------------------------------------------
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.level=INFO
+quarkus.log.category."io.quarkiverse.mcp".level=INFO
 quarkus.log.category."com.redhat.kb".level=DEBUG
+
+# -----------------------------------------------------------------------------
+# Transport Configuration
+# -----------------------------------------------------------------------------
+# By default, HTTP transport is enabled and STDIO is disabled.
+# To use STDIO (for Claude Code / Claude Desktop), run with:
+#   -Dquarkus.mcp.server.stdio.enabled=true -Dquarkus.http.host-enabled=false
+#
+# Default: HTTP enabled, STDIO disabled
+quarkus.mcp.server.stdio.enabled=false
+
+# -----------------------------------------------------------------------------
+# Native Build Optimizations
+# -----------------------------------------------------------------------------
+quarkus.native.resources.includes=**/*.properties
+
+# Enable SSL/TLS for native builds (required for HTTPS connections to Red Hat APIs)
+quarkus.ssl.native=true
+quarkus.native.enable-https-url-handler=true
+quarkus.native.additional-build-args=--enable-url-protocols=https
