--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,13 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.mcp</groupId>
-            <artifactId>quarkus-mcp-server-sse</artifactId>
-            <version>1.8.0</version>
+            <artifactId>quarkus-mcp-server-http</artifactId>
+            <version>1.9.0</version>
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.mcp</groupId>
             <artifactId>quarkus-mcp-server-stdio</artifactId>
-            <version>1.8.0</version>
+            <version>1.9.0</version>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
