Add project configuration and fix KB search defaults
Add CI/CD workflows (build, release-image, release-mcp-registry),
Dependabot config, MIT license, MCP registry manifest, Smithery config,
AGENTS.md, and documentation.

Fix DEFAULT_PRODUCT to use full product name required by Red Hat API
("Red Hat OpenShift Container Platform" instead of "OpenShift").
Update tool argument descriptions to match.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ quarkus.log.category."com.redhat.kb".level=DEBUG
 # Transport Configuration
 # -----------------------------------------------------------------------------
 # By default, HTTP transport is enabled and STDIO is disabled.
-# To use STDIO (for Claude Code / Claude Desktop), run with:
+# To use STDIO (for MCP clients like VS Code, Cursor, etc.), run with:
 #   -Dquarkus.mcp.server.stdio.enabled=true -Dquarkus.http.host-enabled=false
 #
 # Default: HTTP enabled, STDIO disabled
