fix: disable arm64 build due to QEMU/Maven compatibility issues

--- a/.github/workflows/release-image.yaml
+++ b/.github/workflows/release-image.yaml
@@ -53,7 +53,8 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          # Note: arm64 disabled due to QEMU/Maven wrapper compatibility issues
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
