fix: correct mcpchecker binary filename

--- a/.github/workflows/mcpchecker.yaml
+++ b/.github/workflows/mcpchecker.yaml
@@ -91,7 +91,7 @@ jobs:
 
       - name: Download mcpchecker
         run: |
-          curl -sL "https://github.com/mcpchecker/mcpchecker/releases/download/${{ env.MCPCHECKER_VERSION }}/mcpchecker_Linux_x86_64.zip" -o mcpchecker.zip
+          curl -sL "https://github.com/mcpchecker/mcpchecker/releases/download/${{ env.MCPCHECKER_VERSION }}/mcpchecker-linux-amd64.zip" -o mcpchecker.zip
           unzip mcpchecker.zip
           chmod +x mcpchecker
           ./mcpchecker version
