fix: use tcpSocket probe instead of http health endpoint

--- a/charts/mcp-redhat-kb/values.yaml
+++ b/charts/mcp-redhat-kb/values.yaml
@@ -70,18 +70,16 @@ resources:
     memory: 256Mi
 
 # -- Liveness and readiness probes
-# Quarkus health endpoints
+# Using tcpSocket since Quarkus health extension is not enabled
 livenessProbe:
-  httpGet:
-    path: /q/health/live
+  tcpSocket:
     port: http
   initialDelaySeconds: 30
   periodSeconds: 10
 readinessProbe:
-  httpGet:
-    path: /q/health/ready
+  tcpSocket:
     port: http
-  initialDelaySeconds: 10
+  initialDelaySeconds: 5
   periodSeconds: 10
 
 # -- Additional volumes
